# creativeai-symposium

./: README.md  pyproject.toml
creativeai/: gpt.py
notebooks/: creativeai.ipynb
